prevent urlbar content jump on opening

--- a/chrome/urlbar/urlbar.css
+++ b/chrome/urlbar/urlbar.css
@@ -176,7 +176,6 @@
   padding: 0 !important;
   border-radius: 8px !important;
   min-height: 37px !important;
-  margin: -4px 0 -1px !important;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12) !important;
   z-index: 99999 !important;
 }
@@ -231,8 +230,8 @@
   height: 37px !important;
 }
 #urlbar[open] #identity-box {
-  margin-inline-start: 8px !important;
-  margin-inline-end: 8px !important;
+  margin-inline-start: 2px !important;
+  margin-block-start: -2px !important;
 }
 #urlbar[open] .urlbarView {
   display: block !important;
